# llm-rag-stack

./: README.md  pyproject.toml
data/raw/: hello.md
src/rag_starter/: api.py  cli.py  config.py  embeddings.py  ingest.py  rag.py  vectorstore.py
tests/: test_smoke.py
