[project]
name = "llm-rag-stack"
version = "0.1.0"
description = "RAG Semantic search stack: FastAPI + ChromaDB + SentenceTransformers"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  "numpy>=1.26",
  "tqdm>=4.66",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6.0", "mypy>=1.8"]

[project.scripts]
rag = "rag_starter.cli:app"

[tool.ruff]
line-length = 100
